Updated the files with non kernel code. By Anbo Wu.